--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ Saved
 *.suo
 *.xcodeproj
 *.xcworkspace
+Content/Assets/UI/blackholeui.uasset
+Content/Assets/UI/MassGauge.png
+Content/Assets/UI/transspritematerial.uasset
